--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>We Brambura 🧳</h1>
-  <p class="subtitle">Compară planuri de sejur: Smart, Balanced, Premium</p>
+  <p class="subtitle">Travel your way. Mix your stay.</p>
 
   <form id="stayForm">
     <div id="errorMessage" style="color: crimson; display: none;"></div>
