--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>We Brambura 🌍</title>
+  <title>We Brambura</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>We Brambura 🧳</h1>
+  <h1>We Brambura</h1>
   <p class="subtitle">Travel your way. Mix your stay.</p>
 
   <form id="stayForm">
     <div id="errorMessage" style="color: crimson; display: none;"></div>
 
-    <label for="dest">Destinație:</label>
-    <input type="text" id="dest" placeholder="ex: Paris" required />
+    <label for="dest">Destination:</label>
+    <input type="text" id="dest" placeholder="e.g. Paris" required />
 
-    <label for="dateFrom">De la:</label>
+    <label for="dateFrom">From:</label>
     <input type="date" id="dateFrom" required />
 
-    <label for="dateTo">Până la:</label>
+    <label for="dateTo">To:</label>
     <input type="date" id="dateTo" required />
 
-    <label for="persons">Număr de persoane:</label>
-    <input type="number" id="persons" min="1" value="1" required />
+    <label for="persons">Number of guests:</label>
+    <input type="number" id="persons" min="1" value="1" step="1" required />
 
-    <label for="maxHotels">Câte hoteluri vrei să combini?</label>
-    <input type="number" id="maxHotels" min="1" max="5" value="2" required />
+    <label for="maxHotels">Max hotels to combine:</label>
+    <input type="number" id="maxHotels" min="1" max="5" value="2" step="1" required />
 
-    <button type="submit">Generează planuri 🏨</button>
+    <button type="submit">Generate plans</button>
   </form>
 
   <div id="searchPage"></div>
 
   <div id="resultsPage" style="display: none;">
-    <button id="backBtn">🔙 Înapoi</button>
+    <button id="backBtn">← Back</button>
     <div id="results"></div>
   </div>
 
