--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <button type="button" class="step-btn" data-target="maxHotels" data-action="increase">+</button>
     </div>
 
-    <button type="submit">Generate plans</button>
+    <button type="submit">Find my stay</button>
   </form>
 
   <div id="searchPage"></div>
