--- a/index.html
+++ b/index.html
@@ -1,49 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>We Brambura</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Planificator Brambura</title>
+
+  <!-- Leaflet.js -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  ></script>
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>We Brambura</h1>
-  <p class="subtitle">Travel your way. Mix your stay.</p>
+  <div id="searchPage">
+    <h1>🔍 Planifică-ți cazarea cu Brambura</h1>
+    <form id="stayForm">
+      <label>Destinație: <input type="text" id="dest" required /></label><br />
+      <label>Data check-in: <input type="date" id="dateFrom" required /></label><br />
+      <label>Data check-out: <input type="date" id="dateTo" required /></label><br />
+      <label>Nr. persoane: 
+        <button type="button" class="step-btn" data-action="decrease" data-target="persons">–</button>
+        <input type="number" id="persons" value="1" min="1" />
+        <button type="button" class="step-btn" data-action="increase" data-target="persons">+</button>
+      </label><br />
+      <label>Hoteluri max. / categorie:
+        <button type="button" class="step-btn" data-action="decrease" data-target="maxHotels">–</button>
+        <input type="number" id="maxHotels" value="2" min="1" max="5" />
+        <button type="button" class="step-btn" data-action="increase" data-target="maxHotels">+</button>
+      </label><br />
+      <button type="submit">🔎 Găsește cazare</button>
+      <div id="errorMessage"></div>
+    </form>
+  </div>
 
-  <form id="stayForm">
-    <div id="errorMessage" style="color: crimson; display: none;"></div>
-
-    <label for="dest">Destination:</label>
-    <input type="text" id="dest" placeholder="e.g. Paris" required />
-
-    <label for="dateFrom">From:</label>
-    <input type="date" id="dateFrom" required />
-
-    <label for="dateTo">To:</label>
-    <input type="date" id="dateTo" required />
-
-    <label>Number of guests:</label>
-    <div class="stepper">
-      <button type="button" class="step-btn" data-target="persons" data-action="decrease">−</button>
-      <input type="text" id="persons" value="1" readonly />
-      <button type="button" class="step-btn" data-target="persons" data-action="increase">+</button>
-    </div>
-
-    <label>Max hotels to combine:</label>
-    <div class="stepper">
-      <button type="button" class="step-btn" data-target="maxHotels" data-action="decrease">−</button>
-      <input type="text" id="maxHotels" value="2" readonly />
-      <button type="button" class="step-btn" data-target="maxHotels" data-action="increase">+</button>
-    </div>
-
-    <button type="submit">Find my stay</button>
-  </form>
-
-  <div id="searchPage"></div>
-
-  <div id="resultsPage" style="display: none;">
-    <button id="backBtn">← Back</button>
+  <div id="resultsPage" style="display:none;">
     <div id="results"></div>
+    <button id="backBtn">🔙 Înapoi</button>
   </div>
 
   <script src="script.js"></script>
