--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div id="searchPage">
-    <h1>We are Brambura</h1>
+    <h1>We Brambura</h1>
     <h2>Travel your way. Mix your stay.</h2>
 
     <form id="stayForm">
