--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <button type="submit">Find your plan</button>
+      <button type="submit">Find your stay</button>
       <div id="errorMessage"></div>
     </form>
   </div>
