--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="form-row inline-row">
-        <label for="maxHotels">Max hotels per category:</label>
+        <label for="maxHotels">Max hotels no:</label>
         <div class="step-wrapper">
           <button type="button" class="step-btn" data-action="decrease" data-target="maxHotels">–</button>
           <input type="number" id="maxHotels" value="2" min="1" max="5" />
